--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,30 +1,30 @@
 {
   "extName": {
-    "message": "AI Timeline: Самый мощный помощник по эффективности ИИ: ChatGPT, Gemini"
+    "message": "AI Timeline: Самый мощный ИИ-помощник для ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Копирование LaTeX, хронология, Enter для новой строки, помощь с Prompt. Удвойте эффективность работы с ИИ!"
+    "message": "Копирование формул LaTeX, интерактивная шкала времени диалога, перенос строки по Enter, библиотека промптов. Удвойте эффективность работы с ИИ."
   },
   "qwxpzm": {
-    "message": "Сохранить"
+    "message": "Избранное"
   },
   "hkjvnr": {
-    "message": "Просмотр сохранённых"
+    "message": "Просмотр избранного"
   },
   "zmvkpx": {
-    "message": "Сохранить разговор"
+    "message": "Добавить диалог в избранное"
   },
   "bpxjkw": {
-    "message": "Удалить из сохранённых"
+    "message": "Удалить из избранного"
   },
   "vnkxpm": {
-    "message": "Список сохранённых"
+    "message": "Список избранного"
   },
   "kxpmzv": {
-    "message": "Успешно сохранено"
+    "message": "Добавлено в избранное"
   },
   "pzmvkx": {
-    "message": "Удалено из сохранённых"
+    "message": "Удалено из избранного"
   },
   "jwvnkp": {
     "message": "Нет данных"
@@ -51,13 +51,13 @@
     "message": "Подтвердить"
   },
   "mzpxvk": {
-    "message": "Тема не может быть пустой"
+    "message": "Заголовок не может быть пустым"
   },
   "xvkpmz": {
     "message": "Переименовать"
   },
   "pzmkvx": {
-    "message": "Содержание не может быть пустым"
+    "message": "Содержимое не может быть пустым"
   },
   "kmvxpz": {
     "message": "Все данные хранятся локально в вашем браузере"
@@ -66,7 +66,7 @@
     "message": "Открытый исходный код"
   },
   "mkvxpz": {
-    "message": "Звезда на GitHub"
+    "message": "Поставить звезду на GitHub"
   },
   "xpzmkv": {
     "message": "Добро пожаловать"
@@ -75,7 +75,7 @@
     "message": "Поделиться с друзьями"
   },
   "fbklink": {
-    "message": "Отзыв"
+    "message": "Обратная связь"
   },
   "mvxkpz": {
     "message": "Копировать формулу LaTeX"
@@ -93,22 +93,22 @@
     "message": "Папка по умолчанию"
   },
   "xmkvpz": {
-    "message": "Создать подпапку в「{folderName}」"
+    "message": "Создать подпапку в «{folderName}»"
   },
   "vzkpmx": {
-    "message": "Пожалуйста, введите имя папки"
+    "message": "Введите название папки"
   },
   "kmxpvz": {
-    "message": "Имя папки обязательно"
+    "message": "Название папки не может быть пустым"
   },
   "pxmzvk": {
     "message": "Переименовать папку"
   },
   "mvzxkp": {
-    "message": "Пожалуйста, введите новое имя"
+    "message": "Введите новое название"
   },
   "kpvzmx": {
-    "message": "Имя папки уже существует"
+    "message": "Папка с таким названием уже существует"
   },
   "xzvkpm": {
     "message": "Успешно создано"
@@ -132,13 +132,13 @@
     "message": "Переместить в"
   },
   "wjxnkp": {
-    "message": "Удалить папку「{folderName}」?\n\nЭта папка и её подпапки содержат {count} сохранённых элементов. Они будут перемещены в папку по умолчанию."
+    "message": "Вы уверены, что хотите удалить папку «{folderName}»?\n\nЭта папка и её подпапки содержат {count} избранных элементов. После удаления эти элементы будут перемещены в папку по умолчанию."
   },
   "qzmvkx": {
-    "message": "Вы уверены, что хотите удалить папку「{folderName}」?"
+    "message": "Вы уверены, что хотите удалить папку «{folderName}»?"
   },
   "mvkzpx": {
-    "message": "Поиск в сохранённых..."
+    "message": "Поиск в избранном..."
   },
   "kxzpmv": {
     "message": "Сохранить в"
@@ -150,31 +150,28 @@
     "message": "Заголовок"
   },
   "pxkmvz": {
-    "message": "Временная шкала"
+    "message": "Шкала времени"
   },
   "mzkvxp": {
-    "message": "При включении интерактивная временная шкала появится справа на странице разговора AI."
+    "message": "При включении справа на странице диалога с ИИ отображается интерактивная шкала времени."
   },
   "vkpmzx": {
-    "message": "Клавиши ↑ / ↓ для навигации между узлами разговора"
+    "message": "Используйте клавиши ↑ / ↓ для навигации по узлам диалога"
   },
   "xpvmkz": {
-    "message": "При включении используйте клавиши ↑ / ↓ для быстрого перехода между узлами разговора."
+    "message": "При включении используйте клавиши ↑ / ↓ для быстрого перехода между узлами диалога."
   },
   "pxmzkv": {
-    "message": "📌 Отметить ключевые беседы"
+    "message": "📌 Отметить важные диалоги"
   },
   "kzxvpm": {
-    "message": "Долго нажмите на узел разговора на временной шкале, чтобы отметить его как важный."
+    "message": "Нажмите и удерживайте узел диалога на шкале времени, чтобы отметить его как важный."
   },
   "xmvkpz": {
-    "message": "Поле чата"
+    "message": "Окно чата"
   },
   "kvzmxp": {
-    "message": "Использовать клавишу Enter клавиатуры для новой строки"
-  },
-  "mxpzvk": {
-    "message": "При включении, в поле ввода разговора AI, нажмите клавишу Enter один раз для новой строки, дважды быстро для отправки сообщения."
+    "message": "Используйте клавишу Enter для переноса строки"
   },
   "kpxvmz": {
     "message": "Копировать формулу"
@@ -183,39 +180,85 @@
     "message": "Копировать формулу LaTeX"
   },
   "vxkpzm": {
-    "message": "При включении автоматически определять формулы на странице и нажимать для копирования в формате LaTeX."
+    "message": "При включении автоматически обнаруживает формулы на странице, и вы можете скопировать их в формате LaTeX одним кликом."
   },
   "mkvzpx": {
     "message": "Поддерживаемые платформы"
   },
-  "zpkmvx": {
-    "message": "Enter для новой строки"
-  },
   "vxmkpz": {
-    "message": "Клавиша Enter: Один раз для новой строки, дважды для отправки"
+    "message": "Клавиша Enter: одно нажатие — перенос строки, двойное нажатие — отправка"
   },
   "mkpxvz": {
-    "message": "При включении, в поле ввода разговора AI, нажмите клавишу Enter один раз для новой строки, дважды быстро для отправки сообщения."
-  },
-  "zpvmkx": {
-    "message": "Ошибка сохранения"
+    "message": "При включении в поле ввода чата ИИ одно нажатие Enter создаёт перенос строки, быстрое двойное нажатие отправляет сообщение."
   },
   "xvpmkz": {
-    "message": "Просмотреть список избранного"
+    "message": "Просмотр списка избранного"
   },
   "qoytxz": {
-    "message": "Эта функция всегда включена и не может быть отключена"
-  }
-,
+    "message": "Эта функция включена по умолчанию и не может быть отключена"
+  },
   "hosegod": {
     "message": "Библиотека промптов"
-  }
-,
-  "promptButtonDisplay": {
-    "message": "Кнопка промптов"
   },
   "hobsidbg": {
-    "message": "При включении показывать кнопку быстрого доступа к промптам слева от поля чата"
+    "message": "При включении слева от окна чата отображается кнопка быстрого доступа к промптам"
+  },
+  "biwhckdj": {
+    "message": "Список промптов"
+  },
+  "byaskjndg": {
+    "message": "Добавить промпт"
+  },
+  "hsksuywm": {
+    "message": "Редактировать промпт"
+  },
+  "hsuywkw": {
+    "message": "Название промпта"
+  },
+  "hsuywkwPlaceholder": {
+    "message": "Введите название промпта"
+  },
+  "promptContent": {
+    "message": "Содержимое"
+  },
+  "uwkjwjw": {
+    "message": "Введите содержимое промпта"
+  },
+  "hsiwhwl": {
+    "message": "Нет промптов"
+  },
+  "shwsuwk": {
+    "message": "Промпт добавлен"
+  },
+  "hwkwbhwk": {
+    "message": "Промпт обновлён"
+  },
+  "qrtypd": {
+    "message": "Промпт удалён"
+  },
+  "dcnfmq": {
+    "message": "Вы уверены, что хотите удалить этот промпт?"
+  },
+  "pbtdsq": {
+    "message": "Кнопка промпта"
+  },
+  "svkbtn": {
+    "message": "Сохранить"
+  },
+  "pmpknd": {
+    "message": "Закреплено"
+  },
+  "pmuknp": {
+    "message": "Откреплено"
+  },
+  "addkbt": {
+    "message": "Добавить"
+  },
+  "ptfmsl": {
+    "message": "Применяется к"
+  },
+  "allptfm": {
+    "message": "Все ИИ-платформы"
   }
 }
 
