--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline: The Most Powerful AI Efficiency Assistant: ChatGPT, Gemini"
+    "message": "AI Timeline: The Most Powerful AI Efficiency Assistant for ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Copy LaTeX formulae, conversation timeline, Enter key for newline, Prompt assistance. Double your AI efficiency!"
+    "message": "Copy LaTeX formulas, interactive conversation timeline, Enter key for newline, prompt library assistance. Double your AI efficiency."
   },
   "qwxpzm": {
     "message": "Star"
@@ -18,16 +18,16 @@
     "message": "Unstar"
   },
   "vnkxpm": {
-    "message": "My Starred"
+    "message": "Starred List"
   },
   "kxpmzv": {
-    "message": "Starred"
+    "message": "Starred Successfully"
   },
   "pzmvkx": {
     "message": "Unstarred"
   },
   "jwvnkp": {
-    "message": "No data"
+    "message": "No Data"
   },
   "mvkxpz": {
     "message": "Copy"
@@ -39,10 +39,10 @@
     "message": "Edit"
   },
   "kpzmvx": {
-    "message": "Copy failed"
+    "message": "Copy Failed"
   },
   "zmxvkp": {
-    "message": "Enter"
+    "message": "Please Enter"
   },
   "pxvkmz": {
     "message": "Cancel"
@@ -51,7 +51,7 @@
     "message": "Confirm"
   },
   "mzpxvk": {
-    "message": "Theme cannot be empty"
+    "message": "Title cannot be empty"
   },
   "xvkpmz": {
     "message": "Rename"
@@ -60,16 +60,16 @@
     "message": "Content cannot be empty"
   },
   "kmvxpz": {
-    "message": "All data stored locally in your browser"
+    "message": "All data is stored locally in your browser"
   },
   "vxpzmk": {
-    "message": "Open source"
+    "message": "Open Source"
   },
   "mkvxpz": {
     "message": "Star on GitHub"
   },
   "xpzmkv": {
-    "message": "Welcome to"
+    "message": "Welcome"
   },
   "pkmzvx": {
     "message": "Share with Friends"
@@ -93,13 +93,13 @@
     "message": "Default Folder"
   },
   "xmkvpz": {
-    "message": "New subfolder in「{folderName}」"
+    "message": "Create subfolder in \"{folderName}\""
   },
   "vzkpmx": {
     "message": "Enter folder name"
   },
   "kmxpvz": {
-    "message": "Folder name required"
+    "message": "Folder name cannot be empty"
   },
   "pxmzvk": {
     "message": "Rename Folder"
@@ -108,34 +108,34 @@
     "message": "Enter new name"
   },
   "kpvzmx": {
-    "message": "Folder name exists"
+    "message": "Folder name already exists"
   },
   "xzvkpm": {
-    "message": "Created"
+    "message": "Created Successfully"
   },
   "vmkxpz": {
-    "message": "Updated"
+    "message": "Updated Successfully"
   },
   "zpxmkv": {
     "message": "Folder not found"
   },
   "kvpzmx": {
-    "message": "Folder deleted"
+    "message": "Folder Deleted"
   },
   "mxkvzp": {
-    "message": "Delete failed"
+    "message": "Delete Failed"
   },
   "pzvkmx": {
-    "message": "Moved"
+    "message": "Moved Successfully"
   },
   "vxkpmz": {
     "message": "Move to"
   },
   "wjxnkp": {
-    "message": "Delete folder「{folderName}」?\n\nThis folder and its subfolders contain {count} starred items. These items will be moved to the default folder."
+    "message": "Are you sure you want to delete folder \"{folderName}\"?\n\nThis folder and its subfolders contain {count} starred items. These items will be moved to the default folder after deletion."
   },
   "qzmvkx": {
-    "message": "Delete folder「{folderName}」?"
+    "message": "Are you sure you want to delete folder \"{folderName}\"?"
   },
   "mvkzpx": {
     "message": "Search starred..."
@@ -153,16 +153,16 @@
     "message": "Timeline"
   },
   "mzkvxp": {
-    "message": "When enabled, an interactive timeline will appear on the right side of the AI conversation page."
+    "message": "When enabled, an interactive timeline will be displayed on the right side of the AI conversation page."
   },
   "vkpmzx": {
-    "message": "Keyboard ↑ / ↓ Keys to Navigate Conversation Nodes"
+    "message": "Use ↑ / ↓ keys to navigate conversation nodes"
   },
   "xpvmkz": {
-    "message": "When enabled, use keyboard ↑ / ↓ keys to quickly jump between conversation nodes."
+    "message": "When enabled, use ↑ / ↓ keys to quickly jump between conversation nodes."
   },
   "pxmzkv": {
-    "message": "📌 Mark Key Conversations"
+    "message": "📌 Mark Important Conversations"
   },
   "kzxvpm": {
     "message": "Long press on a conversation node in the timeline to mark it as important."
@@ -171,10 +171,7 @@
     "message": "Chat Box"
   },
   "kvzmxp": {
-    "message": "Use Keyboard Enter Key for New Line"
-  },
-  "mxpzvk": {
-    "message": "When enabled, in the AI conversation input box, press Enter key once for new line, double-press Enter key quickly to send message."
+    "message": "Use Enter Key for New Line"
   },
   "kpxvmz": {
     "message": "Copy Formula"
@@ -183,34 +180,84 @@
     "message": "Copy LaTeX Formula"
   },
   "vxkpzm": {
-    "message": "When enabled, automatically identify formulas on the page and click to copy as LaTeX format."
+    "message": "When enabled, formulas on the page are automatically detected. Click to copy in LaTeX format."
   },
   "mkvzpx": {
     "message": "Supported Platforms"
   },
-  "zpkmvx": {
-    "message": "Press Enter for New Line"
-  },
   "vxmkpz": {
-    "message": "Enter key: Press once for new line, double-press to send"
+    "message": "Enter key: Single press for new line, double press to send"
   },
   "mkpxvz": {
-    "message": "When enabled, in the AI conversation input box, press Enter key once for new line, double-press Enter key quickly to send message."
+    "message": "When enabled, press Enter once for a new line in the AI chat input box; press Enter twice quickly to send the message."
   },
   "xvpmkz": {
     "message": "View Starred List"
   },
   "qoytxz": {
-    "message": "This feature is always enabled and cannot be turned off"
+    "message": "This feature is enabled by default and cannot be turned off"
   },
   "hosegod": {
     "message": "Prompt Library"
-  }
-,
-  "promptButtonDisplay": {
-    "message": "Prompt Button"
   },
   "hobsidbg": {
-    "message": "When enabled, show prompt shortcut button on the left side of the chat box"
+    "message": "When enabled, a prompt shortcut button will be displayed on the left side of the chat box"
+  },
+  "biwhckdj": {
+    "message": "Prompt List"
+  },
+  "byaskjndg": {
+    "message": "Add Prompt"
+  },
+  "hsksuywm": {
+    "message": "Edit Prompt"
+  },
+  "hsuywkw": {
+    "message": "Prompt Name"
+  },
+  "hsuywkwPlaceholder": {
+    "message": "Enter prompt name"
+  },
+  "promptContent": {
+    "message": "Content"
+  },
+  "uwkjwjw": {
+    "message": "Enter prompt content"
+  },
+  "hsiwhwl": {
+    "message": "No Prompts Yet"
+  },
+  "shwsuwk": {
+    "message": "Prompt Added"
+  },
+  "hwkwbhwk": {
+    "message": "Prompt Updated"
+  },
+  "qrtypd": {
+    "message": "Prompt Deleted"
+  },
+  "dcnfmq": {
+    "message": "Are you sure you want to delete this prompt?"
+  },
+  "pbtdsq": {
+    "message": "Prompt Button"
+  },
+  "svkbtn": {
+    "message": "Save"
+  },
+  "pmpknd": {
+    "message": "Pinned"
+  },
+  "pmuknp": {
+    "message": "Unpinned"
+  },
+  "addkbt": {
+    "message": "Add"
+  },
+  "ptfmsl": {
+    "message": "Applies to"
+  },
+  "allptfm": {
+    "message": "All AI Platforms"
   }
 }
