--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -1,30 +1,30 @@
 {
   "extName": {
-    "message": "AI Timeline: सबसे शक्तिशाली AI दक्षता सहायक: ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline: सबसे शक्तिशाली AI दक्षता सहायक - ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "विशेषताएं: LaTeX सूत्र कॉपी, टाइमलाइन, Enter कुंजी, प्रॉम्प्ट सहायता। अपनी AI दक्षता को दोगुना करें!"
+    "message": "LaTeX फ़ॉर्मूला कॉपी करें, इंटरैक्टिव वार्तालाप टाइमलाइन, Enter से नई लाइन, प्रॉम्प्ट लाइब्रेरी। अपनी AI दक्षता दोगुनी करें।"
   },
   "qwxpzm": {
-    "message": "सहेजें"
+    "message": "पसंदीदा"
   },
   "hkjvnr": {
-    "message": "सहेजे गए देखें"
+    "message": "पसंदीदा देखें"
   },
   "zmvkpx": {
-    "message": "बातचीत सहेजें"
+    "message": "वार्तालाप पसंदीदा में जोड़ें"
   },
   "bpxjkw": {
-    "message": "सहेजे गए से हटाएं"
+    "message": "पसंदीदा से हटाएं"
   },
   "vnkxpm": {
-    "message": "सहेजी गई सूची"
+    "message": "पसंदीदा सूची"
   },
   "kxpmzv": {
-    "message": "सफलतापूर्वक सहेजा गया"
+    "message": "पसंदीदा में जोड़ा गया"
   },
   "pzmvkx": {
-    "message": "सहेजे गए से हटा दिया गया"
+    "message": "पसंदीदा से हटाया गया"
   },
   "jwvnkp": {
     "message": "कोई डेटा नहीं"
@@ -33,13 +33,13 @@
     "message": "कॉपी करें"
   },
   "xpzmvk": {
-    "message": "कॉपी किया गया"
+    "message": "कॉपी हो गया"
   },
   "vkpxzm": {
     "message": "संपादित करें"
   },
   "kpzmvx": {
-    "message": "कॉपी विफल रहा"
+    "message": "कॉपी विफल"
   },
   "zmxvkp": {
     "message": "कृपया दर्ज करें"
@@ -51,7 +51,7 @@
     "message": "पुष्टि करें"
   },
   "mzpxvk": {
-    "message": "विषय खाली नहीं हो सकता"
+    "message": "शीर्षक खाली नहीं हो सकता"
   },
   "xvkpmz": {
     "message": "नाम बदलें"
@@ -66,7 +66,7 @@
     "message": "ओपन सोर्स"
   },
   "mkvxpz": {
-    "message": "GitHub पर स्टार"
+    "message": "GitHub पर स्टार करें"
   },
   "xpzmkv": {
     "message": "स्वागत है"
@@ -78,13 +78,13 @@
     "message": "प्रतिक्रिया"
   },
   "mvxkpz": {
-    "message": "LaTeX सूत्र कॉपी करें"
+    "message": "LaTeX फ़ॉर्मूला कॉपी करें"
   },
   "kxvpmz": {
     "message": "नया फ़ोल्डर"
   },
   "vpmzkx": {
-    "message": "नया उप-फ़ोल्डर"
+    "message": "नया सबफ़ोल्डर"
   },
   "mzxvkp": {
     "message": "हटाएं"
@@ -93,22 +93,22 @@
     "message": "डिफ़ॉल्ट फ़ोल्डर"
   },
   "xmkvpz": {
-    "message": "「{folderName}」में उप-फ़ोल्डर बनाएं"
+    "message": "\"{folderName}\" में सबफ़ोल्डर बनाएं"
   },
   "vzkpmx": {
-    "message": "कृपया फ़ोल्डर नाम दर्ज करें"
+    "message": "फ़ोल्डर का नाम दर्ज करें"
   },
   "kmxpvz": {
-    "message": "फ़ोल्डर नाम आवश्यक है"
+    "message": "फ़ोल्डर का नाम खाली नहीं हो सकता"
   },
   "pxmzvk": {
-    "message": "फ़ोल्डर नाम बदलें"
+    "message": "फ़ोल्डर का नाम बदलें"
   },
   "mvzxkp": {
-    "message": "कृपया नया नाम दर्ज करें"
+    "message": "नया नाम दर्ज करें"
   },
   "kpvzmx": {
-    "message": "फ़ोल्डर नाम पहले से मौजूद है"
+    "message": "फ़ोल्डर का नाम पहले से मौजूद है"
   },
   "xzvkpm": {
     "message": "सफलतापूर्वक बनाया गया"
@@ -120,28 +120,28 @@
     "message": "फ़ोल्डर नहीं मिला"
   },
   "kvpzmx": {
-    "message": "फ़ोल्डर हटा दिया गया"
+    "message": "फ़ोल्डर हटाया गया"
   },
   "mxkvzp": {
-    "message": "हटाना विफल रहा"
+    "message": "हटाना विफल"
   },
   "pzvkmx": {
-    "message": "सफलतापूर्वक स्थानांतरित किया गया"
+    "message": "सफलतापूर्वक स्थानांतरित"
   },
   "vxkpmz": {
-    "message": "स्थानांतरित करें"
+    "message": "यहां स्थानांतरित करें"
   },
   "wjxnkp": {
-    "message": "फ़ोल्डर「{folderName}」हटाएं?\n\nइस फ़ोल्डर और इसके उप-फ़ोल्डर में {count} सहेजी गई आइटम हैं। इन्हें डिफ़ॉल्ट फ़ोल्डर में स्थानांतरित किया जाएगा।"
+    "message": "क्या आप वाकई \"{folderName}\" फ़ोल्डर को हटाना चाहते हैं?\n\nइस फ़ोल्डर और इसके सबफ़ोल्डर में {count} पसंदीदा आइटम हैं। हटाने के बाद, ये आइटम डिफ़ॉल्ट फ़ोल्डर में स्थानांतरित कर दिए जाएंगे।"
   },
   "qzmvkx": {
-    "message": "क्या आप वाकई फ़ोल्डर「{folderName}」हटाना चाहते हैं?"
+    "message": "क्या आप वाकई \"{folderName}\" फ़ोल्डर को हटाना चाहते हैं?"
   },
   "mvkzpx": {
-    "message": "सहेजे गए में खोजें..."
+    "message": "पसंदीदा खोजें..."
   },
   "kxzpmv": {
-    "message": "में सहेजें"
+    "message": "यहां सहेजें"
   },
   "vmzpkx": {
     "message": "डिफ़ॉल्ट फ़ोल्डर"
@@ -153,69 +153,111 @@
     "message": "टाइमलाइन"
   },
   "mzkvxp": {
-    "message": "सक्षम होने पर, AI बातचीत पृष्ठ के दाईं ओर एक इंटरैक्टिव टाइमलाइन दिखाई देगी।"
+    "message": "सक्षम होने पर, AI वार्तालाप पृष्ठ के दाईं ओर एक इंटरैक्टिव टाइमलाइन प्रदर्शित होगी।"
   },
   "vkpmzx": {
-    "message": "कीबोर्ड ↑ / ↓ कुंजियाँ बातचीत नोड्स के बीच नेविगेट करने के लिए"
+    "message": "वार्तालाप नोड्स के बीच नेविगेट करने के लिए ↑ / ↓ कुंजियों का उपयोग करें"
   },
   "xpvmkz": {
-    "message": "सक्षम होने पर, बातचीत नोड्स के बीच जल्दी से कूदने के लिए कीबोर्ड ↑ / ↓ कुंजियों का उपयोग करें।"
+    "message": "सक्षम होने पर, वार्तालाप नोड्स के बीच तेज़ी से जाने के लिए ↑ / ↓ कुंजियों का उपयोग करें।"
   },
   "pxmzkv": {
-    "message": "📌 मुख्य बातचीत चिह्नित करें"
+    "message": "📌 महत्वपूर्ण वार्तालाप चिह्नित करें"
   },
   "kzxvpm": {
-    "message": "इसे महत्वपूर्ण के रूप में चिह्नित करने के लिए टाइमलाइन में बातचीत नोड पर लंबे समय तक दबाएं।"
+    "message": "टाइमलाइन पर किसी वार्तालाप नोड को महत्वपूर्ण के रूप में चिह्नित करने के लिए देर तक दबाएं।"
   },
   "xmvkpz": {
     "message": "चैट बॉक्स"
   },
   "kvzmxp": {
-    "message": "नई लाइन के लिए कीबोर्ड Enter कुंजी का उपयोग करें"
-  },
-  "mxpzvk": {
-    "message": "सक्षम होने पर, AI वार्तालाप इनपुट बॉक्स में, नई लाइन के लिए Enter कुंजी को एक बार दबाएं, संदेश भेजने के लिए तेज़ी से दो बार दबाएं।"
+    "message": "नई लाइन के लिए Enter कुंजी का उपयोग करें"
   },
   "kpxvmz": {
-    "message": "सूत्र कॉपी करें"
+    "message": "फ़ॉर्मूला कॉपी करें"
   },
   "zmkvpx": {
-    "message": "LaTeX सूत्र कॉपी करें"
+    "message": "LaTeX फ़ॉर्मूला कॉपी करें"
   },
   "vxkpzm": {
-    "message": "सक्षम होने पर, पृष्ठ पर सूत्रों को स्वचालित रूप से पहचानें और LaTeX प्रारूप में कॉपी करने के लिए क्लिक करें।"
+    "message": "सक्षम होने पर, पृष्ठ पर फ़ॉर्मूला स्वचालित रूप से पहचाना जाता है और LaTeX प्रारूप में कॉपी करने के लिए क्लिक करें।"
   },
   "mkvzpx": {
     "message": "समर्थित प्लेटफ़ॉर्म"
   },
-  "zpkmvx": {
-    "message": "नई लाइन के लिए Enter दबाएं"
-  },
   "vxmkpz": {
-    "message": "Enter कुंजी: एक बार नई लाइन, दो बार भेजें"
+    "message": "Enter कुंजी: नई लाइन के लिए एक बार दबाएं, भेजने के लिए दो बार दबाएं"
   },
   "mkpxvz": {
-    "message": "सक्षम होने पर, AI वार्तालाप इनपुट बॉक्स में, नई लाइन के लिए Enter कुंजी को एक बार दबाएं, संदेश भेजने के लिए तेज़ी से दो बार दबाएं।"
-  },
-  "zpvmkx": {
-    "message": "सहेजना विफल रहा"
+    "message": "सक्षम होने पर, AI चैट इनपुट बॉक्स में, नई लाइन के लिए Enter एक बार दबाएं, संदेश भेजने के लिए जल्दी से दो बार दबाएं।"
   },
   "xvpmkz": {
     "message": "पसंदीदा सूची देखें"
   },
   "qoytxz": {
-    "message": "यह सुविधा हमेशा सक्षम है और इसे बंद नहीं किया जा सकता"
-  }
-,
+    "message": "यह सुविधा डिफ़ॉल्ट रूप से सक्षम है और बंद नहीं की जा सकती"
+  },
   "hosegod": {
     "message": "प्रॉम्प्ट लाइब्रेरी"
-  }
-,
-  "promptButtonDisplay": {
-    "message": "प्रॉम्प्ट बटन"
   },
   "hobsidbg": {
-    "message": "सक्षम होने पर, चैट बॉक्स के बाईं ओर प्रॉम्प्ट शॉर्टकट बटन दिखाएं"
+    "message": "सक्षम होने पर, चैट बॉक्स के बाईं ओर प्रॉम्प्ट शॉर्टकट बटन प्रदर्शित होता है"
+  },
+  "biwhckdj": {
+    "message": "प्रॉम्प्ट सूची"
+  },
+  "byaskjndg": {
+    "message": "प्रॉम्प्ट जोड़ें"
+  },
+  "hsksuywm": {
+    "message": "प्रॉम्प्ट संपादित करें"
+  },
+  "hsuywkw": {
+    "message": "प्रॉम्प्ट नाम"
+  },
+  "hsuywkwPlaceholder": {
+    "message": "प्रॉम्प्ट नाम दर्ज करें"
+  },
+  "promptContent": {
+    "message": "सामग्री"
+  },
+  "uwkjwjw": {
+    "message": "प्रॉम्प्ट सामग्री दर्ज करें"
+  },
+  "hsiwhwl": {
+    "message": "कोई प्रॉम्प्ट नहीं"
+  },
+  "shwsuwk": {
+    "message": "प्रॉम्प्ट जोड़ा गया"
+  },
+  "hwkwbhwk": {
+    "message": "प्रॉम्प्ट अपडेट किया गया"
+  },
+  "qrtypd": {
+    "message": "प्रॉम्प्ट हटाया गया"
+  },
+  "dcnfmq": {
+    "message": "क्या आप वाकई इस प्रॉम्प्ट को हटाना चाहते हैं?"
+  },
+  "pbtdsq": {
+    "message": "प्रॉम्प्ट बटन"
+  },
+  "svkbtn": {
+    "message": "सहेजें"
+  },
+  "pmpknd": {
+    "message": "पिन किया गया"
+  },
+  "pmuknp": {
+    "message": "पिन हटाया गया"
+  },
+  "addkbt": {
+    "message": "जोड़ें"
+  },
+  "ptfmsl": {
+    "message": "लागू होता है"
+  },
+  "allptfm": {
+    "message": "सभी AI प्लेटफ़ॉर्म"
   }
 }
-
