--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -1,30 +1,30 @@
 {
   "extName": {
-    "message": "AI Timeline: ผู้ช่วย AI ที่ทรงพลังที่สุด: ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline: ผู้ช่วยประสิทธิภาพ AI ที่ทรงพลังที่สุดสำหรับ ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "คุณสมบัติ: คัดลอกสูตร LaTeX, ไทม์ไลน์, Enter ขึ้นบรรทัดใหม่, Prompt. เพิ่มประสิทธิภาพ AI เป็นสองเท่า!"
+    "message": "คัดลอกสูตร LaTeX, ไทม์ไลน์การสนทนาแบบโต้ตอบ, ขึ้นบรรทัดใหม่ด้วย Enter, คลัง Prompt เพิ่มประสิทธิภาพ AI ของคุณเป็นสองเท่า"
   },
   "qwxpzm": {
-    "message": "บันทึก"
+    "message": "รายการโปรด"
   },
   "hkjvnr": {
-    "message": "ดูรายการบันทึก"
+    "message": "ดูรายการโปรด"
   },
   "zmvkpx": {
-    "message": "บันทึกการสนทนา"
+    "message": "เพิ่มการสนทนาในรายการโปรด"
   },
   "bpxjkw": {
-    "message": "ยกเลิกการบันทึก"
+    "message": "ลบออกจากรายการโปรด"
   },
   "vnkxpm": {
-    "message": "รายการบันทึก"
+    "message": "รายการโปรด"
   },
   "kxpmzv": {
-    "message": "บันทึกสำเร็จ"
+    "message": "เพิ่มในรายการโปรดแล้ว"
   },
   "pzmvkx": {
-    "message": "ยกเลิกการบันทึกแล้ว"
+    "message": "ลบออกจากรายการโปรดแล้ว"
   },
   "jwvnkp": {
     "message": "ไม่มีข้อมูล"
@@ -39,7 +39,7 @@
     "message": "แก้ไข"
   },
   "kpzmvx": {
-    "message": "การคัดลอกล้มเหลว"
+    "message": "คัดลอกล้มเหลว"
   },
   "zmxvkp": {
     "message": "กรุณากรอก"
@@ -51,22 +51,22 @@
     "message": "ยืนยัน"
   },
   "mzpxvk": {
-    "message": "หัวข้อต้องไม่ว่างเปล่า"
+    "message": "หัวข้อไม่สามารถเว้นว่างได้"
   },
   "xvkpmz": {
     "message": "เปลี่ยนชื่อ"
   },
   "pzmkvx": {
-    "message": "เนื้อหาต้องไม่ว่างเปล่า"
+    "message": "เนื้อหาไม่สามารถเว้นว่างได้"
   },
   "kmvxpz": {
-    "message": "ข้อมูลทั้งหมดจัดเก็บในเบราว์เซอร์ของคุณ"
+    "message": "ข้อมูลทั้งหมดถูกเก็บไว้ในเบราว์เซอร์ของคุณ"
   },
   "vxpzmk": {
     "message": "โอเพนซอร์ส"
   },
   "mkvxpz": {
-    "message": "ติดดาวบน GitHub"
+    "message": "ให้ดาวบน GitHub"
   },
   "xpzmkv": {
     "message": "ยินดีต้อนรับ"
@@ -93,22 +93,22 @@
     "message": "โฟลเดอร์เริ่มต้น"
   },
   "xmkvpz": {
-    "message": "สร้างโฟลเดอร์ย่อยใน「{folderName}」"
+    "message": "สร้างโฟลเดอร์ย่อยใน \"{folderName}\""
   },
   "vzkpmx": {
-    "message": "กรุณากรอกชื่อโฟลเดอร์"
+    "message": "กรอกชื่อโฟลเดอร์"
   },
   "kmxpvz": {
-    "message": "จำเป็นต้องระบุชื่อโฟลเดอร์"
+    "message": "ชื่อโฟลเดอร์ไม่สามารถเว้นว่างได้"
   },
   "pxmzvk": {
     "message": "เปลี่ยนชื่อโฟลเดอร์"
   },
   "mvzxkp": {
-    "message": "กรุณากรอกชื่อใหม่"
+    "message": "กรอกชื่อใหม่"
   },
   "kpvzmx": {
-    "message": "ชื่อโฟลเดอร์มีอยู่แล้ว"
+    "message": "ชื่อโฟลเดอร์นี้มีอยู่แล้ว"
   },
   "xzvkpm": {
     "message": "สร้างสำเร็จ"
@@ -123,25 +123,25 @@
     "message": "ลบโฟลเดอร์แล้ว"
   },
   "mxkvzp": {
-    "message": "การลบล้มเหลว"
+    "message": "ลบล้มเหลว"
   },
   "pzvkmx": {
     "message": "ย้ายสำเร็จ"
   },
   "vxkpmz": {
-    "message": "ย้ายไปยัง"
+    "message": "ย้ายไปที่"
   },
   "wjxnkp": {
-    "message": "ลบโฟลเดอร์「{folderName}」?\n\nโฟลเดอร์นี้และโฟลเดอร์ย่อยมีรายการที่บันทึกไว้ {count} รายการ รายการเหล่านี้จะถูกย้ายไปยังโฟลเดอร์เริ่มต้น"
+    "message": "คุณแน่ใจหรือไม่ว่าต้องการลบโฟลเดอร์ \"{folderName}\"?\n\nโฟลเดอร์นี้และโฟลเดอร์ย่อยมี {count} รายการโปรด หลังจากลบ รายการเหล่านี้จะถูกย้ายไปยังโฟลเดอร์เริ่มต้น"
   },
   "qzmvkx": {
-    "message": "คุณแน่ใจหรือไม่ว่าต้องการลบโฟลเดอร์「{folderName}」?"
+    "message": "คุณแน่ใจหรือไม่ว่าต้องการลบโฟลเดอร์ \"{folderName}\"?"
   },
   "mvkzpx": {
-    "message": "ค้นหาในรายการบันทึก..."
+    "message": "ค้นหารายการโปรด..."
   },
   "kxzpmv": {
-    "message": "บันทึกไปยัง"
+    "message": "บันทึกไปที่"
   },
   "vmzpkx": {
     "message": "โฟลเดอร์เริ่มต้น"
@@ -153,28 +153,25 @@
     "message": "ไทม์ไลน์"
   },
   "mzkvxp": {
-    "message": "เมื่อเปิดใช้งาน ไทม์ไลน์แบบโต้ตอบจะปรากฏทางด้านขวาของหน้าการสนทนา AI"
+    "message": "เมื่อเปิดใช้งาน ไทม์ไลน์แบบโต้ตอบจะแสดงทางด้านขวาของหน้าสนทนา AI"
   },
   "vkpmzx": {
-    "message": "ปุ่ม ↑ / ↓ บนคีย์บอร์ดเพื่อนำทางระหว่างโหนดการสนทนา"
+    "message": "ใช้ปุ่ม ↑ / ↓ เพื่อนำทางระหว่างโหนดการสนทนา"
   },
   "xpvmkz": {
-    "message": "เมื่อเปิดใช้งาน ใช้ปุ่ม ↑ / ↓ บนคีย์บอร์ดเพื่อข้ามระหว่างโหนดการสนทนาอย่างรวดเร็ว"
+    "message": "เมื่อเปิดใช้งาน ใช้ปุ่ม ↑ / ↓ เพื่อกระโดดอย่างรวดเร็วระหว่างโหนดการสนทนา"
   },
   "pxmzkv": {
     "message": "📌 ทำเครื่องหมายการสนทนาสำคัญ"
   },
   "kzxvpm": {
-    "message": "กดค้างที่โหนดการสนทนาในไทม์ไลน์เพื่อทำเครื่องหมายว่าสำคัญ"
+    "message": "กดค้างที่โหนดการสนทนาบนไทม์ไลน์เพื่อทำเครื่องหมายว่าสำคัญ"
   },
   "xmvkpz": {
     "message": "กล่องแชท"
   },
   "kvzmxp": {
-    "message": "ใช้ปุ่ม Enter ของคีย์บอร์ดเพื่อขึ้นบรรทัดใหม่"
-  },
-  "mxpzvk": {
-    "message": "เมื่อเปิดใช้งาน ในกล่องป้อนข้อมูลการสนทนา AI กดปุ่ม Enter ครั้งเดียวเพื่อขึ้นบรรทัดใหม่ กดสองครั้งอย่างรวดเร็วเพื่อส่งข้อความ"
+    "message": "ใช้ปุ่ม Enter เพื่อขึ้นบรรทัดใหม่"
   },
   "kpxvmz": {
     "message": "คัดลอกสูตร"
@@ -183,39 +180,85 @@
     "message": "คัดลอกสูตร LaTeX"
   },
   "vxkpzm": {
-    "message": "เมื่อเปิดใช้งาน ระบุสูตรบนหน้าโดยอัตโนมัติและคลิกเพื่อคัดลอกในรูปแบบ LaTeX"
+    "message": "เมื่อเปิดใช้งาน จะตรวจจับสูตรบนหน้าโดยอัตโนมัติและคลิกเพื่อคัดลอกในรูปแบบ LaTeX"
   },
   "mkvzpx": {
     "message": "แพลตฟอร์มที่รองรับ"
-  },
-  "zpkmvx": {
-    "message": "Enter เพื่อขึ้นบรรทัดใหม่"
   },
   "vxmkpz": {
     "message": "ปุ่ม Enter: กดครั้งเดียวเพื่อขึ้นบรรทัดใหม่ กดสองครั้งเพื่อส่ง"
   },
   "mkpxvz": {
-    "message": "เมื่อเปิดใช้งาน ในกล่องป้อนข้อมูลการสนทนา AI กดปุ่ม Enter ครั้งเดียวเพื่อขึ้นบรรทัดใหม่ กดสองครั้งอย่างรวดเร็วเพื่อส่งข้อความ"
-  },
-  "zpvmkx": {
-    "message": "การบันทึกล้มเหลว"
+    "message": "เมื่อเปิดใช้งาน ในกล่องป้อนข้อความแชท AI กด Enter ครั้งเดียวเพื่อขึ้นบรรทัดใหม่ กดเร็วๆ สองครั้งเพื่อส่งข้อความ"
   },
   "xvpmkz": {
     "message": "ดูรายการโปรด"
   },
   "qoytxz": {
-    "message": "คุณสมบัตินี้เปิดใช้งานอยู่เสมอและไม่สามารถปิดได้"
-  }
-,
+    "message": "คุณสมบัตินี้เปิดใช้งานตามค่าเริ่มต้นและไม่สามารถปิดได้"
+  },
   "hosegod": {
-    "message": "คลังพรอมต์"
-  }
-,
-  "promptButtonDisplay": {
-    "message": "ปุ่มพรอมต์"
+    "message": "คลัง Prompt"
   },
   "hobsidbg": {
-    "message": "เมื่อเปิดใช้งาน แสดงปุ่มทางลัดพรอมต์ทางด้านซ้ายของกล่องแชท"
+    "message": "เมื่อเปิดใช้งาน จะแสดงปุ่มทางลัด Prompt ทางด้านซ้ายของกล่องแชท"
+  },
+  "biwhckdj": {
+    "message": "รายการ Prompt"
+  },
+  "byaskjndg": {
+    "message": "เพิ่ม Prompt"
+  },
+  "hsksuywm": {
+    "message": "แก้ไข Prompt"
+  },
+  "hsuywkw": {
+    "message": "ชื่อ Prompt"
+  },
+  "hsuywkwPlaceholder": {
+    "message": "กรอกชื่อ Prompt"
+  },
+  "promptContent": {
+    "message": "เนื้อหา"
+  },
+  "uwkjwjw": {
+    "message": "กรอกเนื้อหา Prompt"
+  },
+  "hsiwhwl": {
+    "message": "ยังไม่มี Prompt"
+  },
+  "shwsuwk": {
+    "message": "เพิ่ม Prompt แล้ว"
+  },
+  "hwkwbhwk": {
+    "message": "อัปเดต Prompt แล้ว"
+  },
+  "qrtypd": {
+    "message": "ลบ Prompt แล้ว"
+  },
+  "dcnfmq": {
+    "message": "คุณแน่ใจหรือไม่ว่าต้องการลบ Prompt นี้?"
+  },
+  "pbtdsq": {
+    "message": "ปุ่ม Prompt"
+  },
+  "svkbtn": {
+    "message": "บันทึก"
+  },
+  "pmpknd": {
+    "message": "ปักหมุดแล้ว"
+  },
+  "pmuknp": {
+    "message": "เลิกปักหมุดแล้ว"
+  },
+  "addkbt": {
+    "message": "เพิ่ม"
+  },
+  "ptfmsl": {
+    "message": "ใช้กับ"
+  },
+  "allptfm": {
+    "message": "ทุกแพลตฟอร์ม AI"
   }
 }
 
