--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Timeline：最强大的AI提效助手：ChatGPT、Gemini、DeepSeek"
   },
   "extDescription": {
-    "message": "复制LaTeX公式、可交互对话时间轴、Enter键换行、Prompt提示词辅助，支持所有主流AI平台，助您使用AI的效率翻倍。"
+    "message": "复制LaTeX公式、可交互对话时间轴、Enter键换行、提示词库辅助，助您使用AI的效率翻倍。"
   },
   "qwxpzm": {
     "message": "收藏"
@@ -173,9 +173,6 @@
   "kvzmxp": {
     "message": "使用键盘 Enter 键换行"
   },
-  "mxpzvk": {
-    "message": "启用后，在 AI 对话输入框中，单击 Enter 键换行，快速双击 Enter 键发送消息。"
-  },
   "kpxvmz": {
     "message": "复制公式"
   },
@@ -187,9 +184,6 @@
   },
   "mkvzpx": {
     "message": "支持的平台"
-  },
-  "zpkmvx": {
-    "message": "单击Enter键换行"
   },
   "vxmkpz": {
     "message": "Enter键：单击换行，双击发送消息"
@@ -219,7 +213,7 @@
     "message": "编辑提示词"
   },
   "hsuywkw": {
-    "message": "名称"
+    "message": "提示词名称"
   },
   "hsuywkwPlaceholder": {
     "message": "输入提示词名称"
@@ -244,9 +238,6 @@
   },
   "dcnfmq": {
     "message": "确定删除这个提示词吗？"
-  },
-  "mngpqt": {
-    "message": "管理提示词"
   },
   "pbtdsq": {
     "message": "提示词按钮"
